--- a/front_end/public/index.html
+++ b/front_end/public/index.html
@@ -15,6 +15,10 @@
    <link rel="stylesheet" href="%PUBLIC_URL%/css/ionicons.min.css">
    <link rel="stylesheet" href="%PUBLIC_URL%/css/bootstrap-datepicker.css">
    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"></script>
+   <!-- Add the slick-theme.css if you want default styling -->
+   <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/slick.css"/>
+   <!-- Add the slick-theme.css if you want default styling -->
+   <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/slick-theme.css"/>
    <!-- custom -->
    <link rel="stylesheet" href="%PUBLIC_URL%/css/style.css">
 
@@ -36,6 +40,7 @@
     <script  src="%PUBLIC_URL%/js/jquery.easing.1.3.js"></script>
     <script  src="%PUBLIC_URL%/js/jquery.waypoints.min.js"></script>
     <script  src="%PUBLIC_URL%/js/jquery.stellar.min.js"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/slick.min.js"></script>
     <script  src="%PUBLIC_URL%/js/main.js"></script>
   </body>
 </html>
